--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-direction: row;
 }
 @mixin cfs {
   display: flex;
@@ -37,5 +38,33 @@
 @mixin cursor {
   transform: scale(1.2);
   cursor: pointer;
-  color: white;
+  color: #565656;
+}
+@mixin bckim {
+  width: 100%;
+  height: 442px;
+  background-size: contain;
+  border-radius: 20px;
+  background-color: #003531;
+  a:link {
+    color: #fff;
+    @include cl;
+    padding-top: 10%;
+    text-shadow: -6px -3px 0px rgb(0 0 0 / 50%);
+    font-size: 160px;
+    font-weight: 900;
+    letter-spacing: -2.4px;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  a:visited {
+    color: #fff;
+    @include cl;
+    padding-top: 10%;
+    text-shadow: -6px -3px 0px rgb(0 0 0 / 50%);
+    font-size: 160px;
+    font-weight: 900;
+    letter-spacing: -2.4px;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
 }
