--- a/css/global.css
+++ b/css/global.css
@@ -58,7 +58,8 @@ a {
 
 p,
 a,
-li {
+li,
+label {
   font-family: "BPG Glaho Bold", sans-serif;
 }
 
@@ -203,10 +204,10 @@ header {
   align-items: center;
   justify-content: center;
 }
-.sm .c5 a:visited {
+.sm .c5 a:link {
   color: white;
 }
-.sm .c5 a:link {
+.sm .c5 a:visited {
   color: white;
 }
 .sm .c5 .a1 {
@@ -631,7 +632,8 @@ header {
   justify-content: center;
   justify-content: space-around;
 }
-.s1950 .lurja2 .images2 .img2 :first-child, .s1950 .lurja2 .images2 .img2 :last-child {
+.s1950 .lurja2 .images2 .img2 :first-child,
+.s1950 .lurja2 .images2 .img2 :last-child {
   height: 180px;
   width: 230px;
   -o-object-fit: cover;
@@ -679,6 +681,128 @@ header {
   line-height: normal;
 }
 
+.sec2 .contactdiv {
+  padding: 8%;
+  width: 100%;
+  height: 700px;
+  background: linear-gradient(#00beac, rgba(0, 190, 172, 0));
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-content: space-around;
+}
+.sec2 .contactdiv h1 {
+  color: #fff;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 900;
+}
+.sec2 .con1 {
+  height: 25%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.sec2 .con1 img {
+  width: 6%;
+  height: 59%;
+}
+.sec2 .con3,
+.sec2 .con4 {
+  height: 15%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-content: flex-start;
+}
+.sec2 .con3 img,
+.sec2 .con4 img {
+  width: 20%;
+  height: 88%;
+}
+.sec2 .col1 {
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  justify-content: space-between;
+}
+
+.sec3 {
+  width: auto;
+  height: 100%;
+  max-height: 100%;
+  padding-top: 10%;
+  background: linear-gradient(#00beac, rgba(0, 190, 172, 0));
+  display: flex;
+  justify-content: center;
+}
+.sec3 .all2 {
+  width: 500px;
+}
+.sec3 .film {
+  background-image: url(../images/Untitled\ design.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 480px;
+  display: flex;
+  justify-content: center;
+}
+.sec3 .mainfeedback {
+  height: 480px;
+  width: 300px;
+  background-color: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.sec3 form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.sec3 .topfeedback {
+  padding-bottom: 8%;
+  padding-top: 8%;
+  font-size: 25px;
+  display: block;
+  font-family: "BPG Glaho Bold", sans-serif;
+  color: #333333;
+  line-height: 1.2;
+  text-align: center;
+  font-weight: 600;
+}
+.sec3 label {
+  padding-bottom: 3%;
+  font-size: 14px;
+}
+.sec3 input {
+  height: 50px;
+  border-radius: 25px;
+  padding: 0 30px;
+  background-color: white;
+  border-color: #0CA296;
+  border-style: outset;
+}
+.sec3 button {
+  width: 80px;
+  height: 35px;
+  border-radius: 25px;
+  background-color: #f9db62;
+  border-color: white;
+  font-size: 15px;
+  line-height: 1.5;
+  color: #fff;
+  margin: 0 auto;
+}
+.sec3 button:hover {
+  cursor: pointer;
+}
+
 .greenbox {
   width: 100%;
   height: 300px;
@@ -695,6 +819,7 @@ header {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  gap: 1rem;
 }
 .greenbox li {
   color: rgba(255, 255, 255, 0.8);
