--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -1,6 +1,8 @@
 p,
 a,
-li {
+li,
+label
+{
   font-family: "BPG Glaho Bold", sans-serif;
 }
 header {
@@ -121,10 +123,10 @@ header {
       border-radius: 10px;
       @include cl;
     }
-    a:visited {
+    a:link {
       color: white;
     }
-    a:link {
+    a:visited {
       color: white;
     }
 
@@ -136,7 +138,7 @@ header {
     .a1:hover {
       @include cursor;
     }
-  
+
     .a2 {
       transition: transform 0.4s;
       background-image: url(../images/60.jpg);
@@ -196,11 +198,10 @@ header {
 .topimg3 {
   @include bckim;
   background-image: url(../images/70.jpg);
-  
 }
 .topimg4 {
- @include bckim;
- background-image: url(../images/80.jpg);
+  @include bckim;
+  background-image: url(../images/80.jpg);
 }
 .list1 {
   width: 547px;
@@ -211,7 +212,7 @@ header {
   li {
     cursor: pointer;
     @include cl;
-   
+
     a:link {
       color: black;
     }
@@ -331,10 +332,10 @@ header {
       }
     }
     .images2 {
-      @include se; 
+      @include se;
       height: 398px;
       width: 504px;
-      
+
       img {
         border-radius: 10px;
       }
@@ -347,7 +348,8 @@ header {
         height: 398px;
         @include cl;
         justify-content: space-around;
-        :first-child, :last-child {
+        :first-child,
+        :last-child {
           height: 180px;
           width: 230px;
           object-fit: cover;
@@ -394,7 +396,120 @@ header {
     }
   }
 }
+.sec2 {
+  .contactdiv {
+    padding: 8%;
+    width: 100%;
+    height: 700px;
+    background: linear-gradient(#00beac, #00beac00);
+    @include sb;
+    justify-content: space-around;
+    h1 {
+      color: #fff;
+      text-align: center;
+      font-size: 40px;
 
+      font-weight: 900;
+    }
+  }
+  .con1 {
+    // width: 25%;
+    height: 25%;
+    @include sb;
+    img {
+      width: 6%;
+      height: 59%;
+    }
+  }
+  .con3,
+  .con4 {
+    // width: 15%;
+    height: 15%;
+    @include sb;
+    justify-content: flex-start;
+    img {
+      width: 20%;
+      height: 88%;
+    }
+  }
+  .col1 {
+    height: 60%;
+    @include cfs;
+    justify-content: space-between;
+  }
+}
+.sec3 {
+  width: auto;
+  height: 100%;
+  max-height: 100%;
+  padding-top: 10%;
+  background: linear-gradient(#00beac, #00beac00);
+  display: flex;
+  justify-content: center;
+  .all2 {
+    width: 500px;
+  }
+  .film {
+    background-image: url(../images/Untitled\ design.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 480px;
+   display: flex;
+   justify-content: center;
+    
+  }
+  .mainfeedback {
+    height: 480px;
+    width: 300px;
+    background-color: #f6f6f6;
+    @include cl;
+    
+    
+    // border-radius: 5%;
+    
+  }
+  form {
+    @include cfs;
+  }
+  .topfeedback {
+    padding-bottom: 8%;
+    padding-top: 8%;
+    font-size: 25px;
+    display: block;
+    font-family: "BPG Glaho Bold", sans-serif;
+    color: #333333;
+    line-height: 1.2;
+    text-align: center;
+    font-weight: 600;
+  }
+  label {
+    padding-bottom: 3%;
+    font-size: 14px;
+  }
+  input {
+    height: 50px;
+    border-radius: 25px;
+    padding: 0 30px;
+    background-color: white;
+    border-color: #0CA296;
+    border-style: outset;
+  }
+  button {
+    width: 80px;
+    height: 35px;
+    border-radius: 25px;
+    background-color:#f9db62;
+    border-color: white;
+    font-size: 15px;
+    line-height: 1.5;
+    color: #fff;
+    margin:  0 auto;
+  }
+  button:hover {
+    cursor: pointer;
+  }
+}
 .greenbox {
   width: 100%;
   height: 300px;
@@ -404,6 +519,7 @@ header {
   justify-content: space-around;
   ul {
     @include cfs;
+    gap: 1rem;
   }
   li {
     color: rgba(255, 255, 255, 0.8);
