--- a/css/global.css
+++ b/css/global.css
@@ -803,6 +803,41 @@ header {
   cursor: pointer;
 }
 
+.about-us {
+  height: 100vh;
+  width: 100%;
+  padding-top: 10%;
+  background: linear-gradient(#00beac, rgba(0, 190, 172, 0));
+}
+.about-us .pic {
+  height: auto;
+}
+.about-us .pic img {
+  width: 80%;
+}
+.about-us .about {
+  width: 1130px;
+  max-width: 85%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.about-us .text {
+  width: 540px;
+}
+.about-us .text h2 {
+  font-size: 50px;
+  font-weight: 600;
+  color: #ffc700;
+}
+.about-us .text p {
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 1px;
+  color: #333333;
+}
+
 .greenbox {
   width: 100%;
   height: 300px;
