--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -413,7 +413,6 @@ header {
     }
   }
   .con1 {
-    // width: 25%;
     height: 25%;
     @include sb;
     img {
@@ -423,7 +422,6 @@ header {
   }
   .con3,
   .con4 {
-    // width: 15%;
     height: 15%;
     @include sb;
     justify-content: flex-start;
@@ -510,6 +508,48 @@ header {
     cursor: pointer;
   }
 }
+
+
+.about-us{
+  height: 100vh;
+  width: 100%;
+  padding-top: 10%;
+  background: linear-gradient(#00beac, #00beac00);
+  .pic {
+    height: auto;
+    img{
+    width: 80%;
+    }
+  }
+  .about{
+    width: 1130px;
+    max-width: 85%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .text{
+    width: 540px;
+    h2{
+      font-size: 50px;
+      font-weight: 600;
+    color: #ffc700;
+    }
+    p{
+      font-size: 18px;
+      line-height: 25px;
+      letter-spacing: 1px;
+      color: #333333;
+    }
+  }
+
+
+
+
+
+}
+
 .greenbox {
   width: 100%;
   height: 300px;
