--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,6 +3,11 @@
   justify-content: space-between;
   align-items: center;
 }
+@mixin center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @mixin se {
   display: flex;
   justify-content: space-evenly;
