--- a/css/global.css
+++ b/css/global.css
@@ -157,12 +157,6 @@ header {
   padding: 20px;
 }
 
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
 .sm {
   width: 100%;
   height: 900px;
@@ -710,7 +704,7 @@ header {
   align-items: center;
 }
 .sec2 .con1 img {
-  width: 6%;
+  width: 12%;
   height: 59%;
 }
 .sec2 .con3,
@@ -733,6 +727,9 @@ header {
   align-items: flex-start;
   justify-content: center;
   justify-content: space-between;
+}
+.sec2 .map iframe {
+  border-radius: 5px;
 }
 
 .sec3 {
